# simpletrainer

./: README.md  pyproject.toml
examples/: train_binary.py  train_multiclass.py  train_multilabel.py  train_regression.py
simpletrainer/: __init__.py  base_trainer.py  criteria.py  metrics.py  optimizers.py  schedulers.py  utils.py
